--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,5 +1,9 @@
 div{
-    background-color: tomato;
+    background-color: rgb(127, 255, 212);
     padding: 10px;
     margin-bottom: 10px;
+    border: 10;
+
+    border-radius: 20px;
+    border-block-end-style: groove ;
 }
